[Curl] Fix DRT crash related to private browsing. https://bugs.webkit.org/show_bug.cgi?id=193816

Patch by Takashi Komori <Takashi.Komori@sony.com> on 2019-01-31
Reviewed by Alex Christensen.

Source/WebKitLegacy:

* WebCoreSupport/NetworkStorageSessionMap.cpp:
(NetworkStorageSessionMap::ensureSession):

Source/WebKitLegacy/win:

* WebCoreSupport/WebFrameNetworkingContext.cpp:
(WebFrameNetworkingContext::ensurePrivateBrowsingSession):

Canonical link: https://commits.webkit.org/208572@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@240791 268f45cc-cd09-0410-ab3c-d52691b4dbfc